@@ -73,8 +73,8 @@ e2ibWOZWTFz8j~/m")))
 	(setq url (and (listp item)
 		       (eq (intern (concat rss-ns "item")) (car item))
 		       (if (string= (shimbun-current-group shimbun) "changes")
-			   (shimbun-rss-node-text rss-ns 'link (cddr item))
-			 (shimbun-rss-node-text wiki-ns 'diff (cddr item)))))
+			   (shimbun-rss-node-text rss-ns 'link item)
+			 (shimbun-rss-node-text wiki-ns 'diff item))))
 	(when url
 	  (let* ((date (or (shimbun-rss-node-text dc-ns 'date item)
 			   (shimbun-rss-node-text rss-ns 'pubDate item)))
@@ -82,8 +82,11 @@ e2ibWOZWTFz8j~/m")))
 	    (unless (shimbun-search-id shimbun id)
 	      (push (shimbun-create-header
 		     0
-		     (shimbun-rss-node-text rss-ns 'title item)
-		     (or (shimbun-rss-node-text dc-ns 'contributor item)
+                     (let ((desc (shimbun-rss-node-text rss-ns 'description item)))
+                       (concat (shimbun-rss-node-text rss-ns 'title item)
+                               (if desc
+                                   (concat " - " desc))))
+		     (or (shimbun-rss-node-text wiki-ns 'username item)
 			 (shimbun-from-address shimbun))
 		     (shimbun-rss-process-date shimbun date)
 		     id "" 0 0 url)
